crates/clove-tui/src/snapshots/clove_tui__snapshot__overview_landscape.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
  All 7  │  Ready 4  │  Blocked 1
┌ Items (7) ───────────────────────────────────┐┌ Overview · Dep tree · Comments ──────────────────────────────────────┐
│▌◐ F #9QX4D1B7 ! Build REST API ●             ││ #9QX4D1B7  ! FEATURE                           ◐ in_progress · ready │
│ ○ B #2HZ6C3PW ↑ Investigate flaky CI ●       ││ Build REST API                                       @grace · deps 1 │
│ ● C #7AF3K2MN ↑ Set up database schema       ││──────────────────────────────────────────────────────────────────────│
│ ○ E #3HT6WYG5 • Ship v1 release ●            ││ Goals                                                                │
│ ○ F #K2M8ZP5R • Write integration tests ✗    ││                                                                      │
│ ○ F #5RB9NC2V • Frontend dashboard ●         ││ Build a REST API with axum; see docs/api.md.                         │
│ ● D #8XQ4F7DM ↓ Docs site                    ││                                                                      │
│                                              ││ • CRUD endpoints                                                     │
│                                              ││ • Auth middleware                                                    │
│                                              ││                                                                      │
│                                              ││ Steps                                                                │
│                                              ││                                                                      │
│                                              ││──────────────────────────────────────────────────────────────────────│
│                                              ││ labels area:api, backend              created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
7 item(s) loaded   ?: help · q: quit
