crates/clove-tui/src/snapshots/clove_tui__snapshot__overview_long_labels_landscape.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
  All 2  │  Ready 1  │  Blocked 0
┌ Items (2) ───────────────────────────────────┐┌ Overview · Dep tree · Comments ──────────────────────────────────────┐
│▌◐ F #2 ! Short title ●                       ││ #2  ! FEATURE  Short title                     ◐ in_progress · ready │
│ ● C #1 • Dependency target                   ││                                                        @ada · deps 1 │
│                                              ││──────────────────────────────────────────────────────────────────────│
│                                              ││ parent     #1                                                        │
│                                              ││ relates    #1                                                        │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││──────────────────────────────────────────────────────────────────────│
│                                              ││ labels area:mobile, area:sync +8      created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
2 item(s) loaded   ?: help · q: quit
