crates/clove-tui/src/snapshots/clove_tui__snapshot__overview_long_labels_portrait.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────┐
│  All 2  │  Rdy 1  │  Blk 0           │
└──────────────────────────────────────┘
┌ Overview · Dep tree · Comments ──────┐
│ #2  FEATURE  Short title             │
│                                      │
│ status     ◐ in_progress · ready     │
│ priority   p0 · @ada                 │
│ deps       1                         │
│ labels     area:mobile, area:sync,   │
│ backend, flaky, frontend, infra,     │
│ kind:regression, needs-review,       │
│ priority:high, team:platform         │
│ created    Jan 1                     │
│ updated    Jan 20                    │
│                                      │
│ parent     #1                        │
│ relates    #1                        │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
2 item(s) loaded  ?·q
