crates/clove-tui/src/snapshots/clove_tui__snapshot__overview_long_labels_square.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────────────────────────┐
│  All 2  │  Ready 1  │  Blocked 0                         │
└──────────────────────────────────────────────────────────┘
┌ Items (2) ───────────────────────────────────────────────┐
│▌◐ F #2 ! Short title ●                                   │
│ ● C #1 • Dependency target                               │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Overview · Dep tree · Comments ──────────────────────────┐
│ #2  FEATURE  Short title           ◐ in_progress · ready │
│ ! · @ada                                                 │
│ deps 1                                                   │
│──────────────────────────────────────────────────────────│
│ parent     #1                                            │
│ relates    #1                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│──────────────────────────────────────────────────────────│
│ labels area:mobile +9     created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────────────────┘
2 item(s) loaded   ?: help · q: quit
