crates/clove-tui/src/snapshots/clove_tui__snapshot__overview_long_title_landscape.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
  All 2  │  Ready 1  │  Blocked 0
┌ Items (2) ───────────────────────────────────┐┌ Overview · Dep tree · Comments ──────────────────────────────────────┐
│▌◐ F #9QX4D1B7 ! Implement end-to-end offl… ● ││ #9QX4D1B7  ! FEATURE                           ◐ in_progress · ready │
│ ● C #7AF3K2MN • Dependency target            ││ Implement end-to-end offline synchronization with co…  @ada · deps 1 │
│                                              ││──────────────────────────────────────────────────────────────────────│
│                                              ││ parent     #7AF3K2MN                                                 │
│                                              ││ relates    #7AF3K2MN                                                 │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││──────────────────────────────────────────────────────────────────────│
│                                              ││ labels area:sync, backend             created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
2 item(s) loaded   ?: help · q: quit
