crates/clove-tui/src/snapshots/clove_tui__snapshot__overview_long_title_square.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────────────────────────┐
│  All 2  │  Ready 1  │  Blocked 0                         │
└──────────────────────────────────────────────────────────┘
┌ Items (2) ───────────────────────────────────────────────┐
│▌◐ F #2 p0 Implement end-to-end offline synchronization … │
│ ● C #1 p2 Dependency target                              │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌ Overview · Dep tree · Comments ──────────────────────────┐
│ #2  FEATURE  Implement end-to-en…  ◐ in_progress · ready │
│                                                p0 · @ada │
│                                                   deps 1 │
│                                                          │
│                                                          │
│ parent     #1                                            │
│ relates    #1                                            │
│                                                          │
│ ──────────────────────────────────────────────────────── │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ labels area:sync +1       created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────────────────┘
2 item(s) loaded   ?: help · q: quit
