crates/clove-tui/src/snapshots/clove_tui__snapshot__overview_portrait.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────┐
│  All 7  │  Rdy 4  │  Blk 1           │
└──────────────────────────────────────┘
┌ Items (7) ───────────────────────────┐
│▌◐ F #9QX4D1B7 ! Build REST API ●     │
│ ○ B #0HZ6C3PW ↑ Investigate flaky… ● │
│ ● C #7AF3K2MN ↑ Set up database s…   │
│ ○ E #3HT6WYG5 • Ship v1 release ●    │
│ ○ F #K2M8ZP5R • Write integration… ✗ │
│ ○ F #5RB9NC2V • Frontend dashboard ● │
│ ● D #8XQ4F7DM ↓ Docs site            │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
7 item(s) loaded  ?·q
