crates/clove-tui/src/snapshots/clove_tui__snapshot__overview_scroll_narrow.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: narrow
---
  All 2  │  Rdy 1  │  Blk 1
┌ Items (2) ───────────────────────────┐
│▌◐ F #2 ! Implement end-to-end offli… │
│ ○ C #1 • Dependency target ●         │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
2 item(s) loaded  ?·q
