crates/clove-tui/src/snapshots/clove_tui__snapshot__search_active_landscape.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
  All 7  │  Ready 4  │  Blocked 1
┌ Items (1/7) ─────────────────────────────────┐┌ Overview · Dep tree · Comments ──────────────────────────────────────┐
│▌◐ F #2 p0 Build REST API ●                   ││ #2  FEATURE  Build REST API                    ◐ in_progress · ready │
│                                              ││                                                          p0 · @grace │
│                                              ││                                                               deps 1 │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││ ──────────────────────────────────────────────────────────────────── │
│                                              ││ Goals                                                                │
│                                              ││                                                                      │
│                                              ││ Build a REST API with axum; see docs/api.md.                         │
│                                              ││                                                                      │
│                                              ││ • CRUD endpoints                                                     │
│                                              ││ • Auth middleware                                                    │
│                                              ││                                                                      │
│                                              ││ labels area:api, backend              created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
/api▏   (Enter: keep · Esc: clear)
